[metadata]
name = mcextract
version = attr: mcextract.__version__
author = Legopitstop
author_email=contact@lpsmods.dev
description=Extract assets and data from the Minecraft jar.
keywords=Minecraft, java, jar, assets, data, reports, UserFolder, ServerJars
url=https://github.com/legopitstop/mcextract/
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
# Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    serverjars-api>=1.3.0
    requests
    progress

[options.entry_points]
console_scripts =
    mcextract = mcextract.cli:main
